# DataCentersManager2

./: CInterface.cpp  CInterface.h  CMakeLists.txt  DataCenter.h  DataCenterManager.h  DataManagerExceptions.h  HashTable  HashTable.h  Server.h  library2.cpp  library2.h  main (1).cpp  main (2).cpp  main.cpp  main2.cpp  vitaly_test.cpp
Data Structures/: Array.h  Set.h  UnionFind.h  linkedList.h
Data Structures/AVLTree/: AVLTree Documentation.txt  AVLTree.h  BinarySearchTree.h  BinaryTree.h
UnionFind/: Set.h  UnionFind.h
