cmake_minimum_required(VERSION 3.13)
project(DataCentersManager2)

set(CMAKE_CXX_STANDARD 11)

#add_executable(DataCentersManager2 main.cpp "Data Structures/AVLTree/AVLTree.h" "Data Structures/Array.h" "Data Structures/AVLTree/BinarySearchTree.h" "Data Structures/AVLTree/BinaryTree.h" "Data Structures/Array.h" "Data Structures/linkedList.h" Server.h DataCenter.h DataCenterManager.h "Data Structures/UnionFind.h" "UnionFind/Set.h" library2.cpp library2.h)
#add_executable(DataCentersManager2 "Data Structures/AVLTree/AVLTree.h" "Data Structures/Array.h" "Data Structures/AVLTree/BinarySearchTree.h" "Data Structures/AVLTree/BinaryTree.h" "Data Structures/Array.h" "Data Structures/linkedList.h" Server.h DataCenter.h DataCenterManager.h "Data Structures/UnionFind.h" "UnionFind/Set.h" library2.cpp library2.h main2.cpp)
#add_executable(DataCentersManager2 "Data Structures/AVLTree/AVLTree.h" "Data Structures/Array.h" "Data Structures/AVLTree/BinarySearchTree.h" "Data Structures/AVLTree/BinaryTree.h" "Data Structures/Array.h" "Data Structures/linkedList.h" Server.h DataCenter.h DataCenterManager.h "Data Structures/UnionFind.h" "UnionFind/Set.h" library2.cpp library2.h "main (1).cpp")
#add_executable(DataCentersManager2 "Data Structures/AVLTree/AVLTree.h" "Data Structures/Array.h" "Data Structures/AVLTree/BinarySearchTree.h" "Data Structures/AVLTree/BinaryTree.h" "Data Structures/Array.h" "Data Structures/linkedList.h" Server.h DataCenter.h DataCenterManager.h "Data Structures/UnionFind.h" "UnionFind/Set.h" library2.cpp library2.h "main (2).cpp")
#add_executable(DataCentersManager2 "Data Structures/AVLTree/AVLTree.h" "Data Structures/Array.h" "Data Structures/AVLTree/BinarySearchTree.h" "Data Structures/AVLTree/BinaryTree.h" "Data Structures/Array.h" "Data Structures/linkedList.h" Server.h DataCenter.h DataCenterManager.h "Data Structures/UnionFind.h" "UnionFind/Set.h" library2.cpp library2.h "main (3).cpp")
add_executable(DataCentersManager2 "Data Structures/AVLTree/AVLTree.h" "Data Structures/Array.h" "Data Structures/AVLTree/BinarySearchTree.h" "Data Structures/AVLTree/BinaryTree.h" "Data Structures/Array.h" "Data Structures/linkedList.h" Server.h DataCenter.h DataCenterManager.h "Data Structures/UnionFind.h" "UnionFind/Set.h" library2.cpp library2.h "vitaly_test.cpp")